<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_blank"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:padding="10dp"
        android:text="@string/song_name"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_song_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/song_info"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/shu_gang"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_song_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/song_album"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_music"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/ll_point"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_point0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/green_point"
            android:contentDescription="@string/song_list" />

        <ImageView
            android:id="@+id/iv_point1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_point"
            android:contentDescription="@string/play_page" />

        <ImageView
            android:id="@+id/iv_point2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/green_point"
            android:contentDescription="@string/lyric_lay" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_player_prev_button"
            android:clickable="true"
            android:contentDescription="@string/previous_song" />

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/selector_player_default_button"
            android:clickable="true"
            android:contentDescription="@string/music_play" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/selector_player_next_button"
            android:clickable="true"
            android:contentDescription="@string/next_song" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_music_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:text="@string/play_progress"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_music_alltime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:text="@string/all_progress"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/sb_song_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

</LinearLayout>