<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#6F5E56"
    android:orientation="vertical"
    android:windowSoftInputMode="stateHidden|adjustPan" 
     >

    <TextView
        android:id="@+id/tv_pop_window_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/download_lyric"
        android:textColor="@color/gray_white"
        android:textSize="25sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray_white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/song_name"
            android:textColor="@color/gray_white"
            android:textSize="18sp" />

        <EditText
            
            android:id="@+id/et_pop_search_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:text="测试"
            android:focusable="true"
            
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/singer_name"
            android:textColor="@color/gray_white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_pop_search_artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="测试"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/album_name"
            android:textColor="@color/gray_white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_pop_search_album_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="测试"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray_white" />

    <Button
        android:id="@+id/ib_pop_search_artist_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_search_btn_bg"
        android:contentDescription="@string/online_download_button"
        android:text="在线搜索"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/lv_pop_search_show_lyric_list"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_pop_search_show_album"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/ll_pop_search_loading_lyric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_lyric"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_pop_search_no_resource"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_search_lyric"
            android:textColor="@color/gray_white"
            android:textSize="20sp"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>